--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -21,17 +21,16 @@
 
       .navbar {
         width: 100%;
-        padding: 18px 45px;
+        padding: 1.2rem 3vw;
         display: flex;
         justify-content: space-between;
         align-items: center;
         position: fixed;
         top: 0;
-        z-index: 100;
+        z-index: 10;
         background: rgba(255, 255, 255, 0.85);
         backdrop-filter: blur(10px);
         box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
-        box-sizing: border-box;
       }
 
       .navbar a:hover,
@@ -50,15 +49,16 @@
       .nav-links a {
         margin-left: 25px;
         text-decoration: none;
-        font-size: 17px;
+        font-size: 1.1rem;
         font-weight: 600;
         color: #222;
         transition: 0.3s;
       }
+
       .nav-links a:hover {
         color: #0077cc;
       }
-
+      
       .title {
         margin-top: 130px;
         text-align: center;
