--- a/aktivitas1.html
+++ b/aktivitas1.html
@@ -679,7 +679,7 @@
       </div>
     </div>
 
-    <h1 class="page-title">AKTIVITAS ADMINISTRASI & PEMERIKSAAN</h1>
+    <h1 class="page-title">AKTIVITAS ADMINISTRASI & PEMERIKSAAN 1</h1>
 
     <div class="diagram-scale">
       <div class="diagram-wrapper">
