--- a/aktivitas6.html
+++ b/aktivitas6.html
@@ -648,12 +648,12 @@
       </div>
     </div>
 
-    <h1 class="page-title">Aktivitas Administrasi & Pemeriksaan</h1>
+    <h1 class="page-title">AKTIVITAS ADMINISTRASI & PEMERIKSAAN 6</h1>
 
     <div class="diagram-scale">
       <div class="diagram-wrapper">
         <div class="column">
-          <div class="column-title">Aktivitas Administrasi 1</div>
+          <div class="column-title">Aktivitas Administrasi 6</div>
 
           <div class="level-layer">
             <div class="level-text aa-lvl-1-label">Level 1</div>
@@ -742,7 +742,7 @@
         </div>
 
         <div class="column">
-          <div class="column-title">Aktivitas Pemeriksaan 1</div>
+          <div class="column-title">Aktivitas Pemeriksaan 6</div>
 
           <div class="level-layer">
             <div class="level-text ap-lvl-1-label">Level 1</div>
