--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -632,13 +632,13 @@
       </div>
     </div>
 
-    <h1 class="page-title">Aktivitas Administrasi & Pemeriksaan 2</h1>
+    <h1 class="page-title">AKTIVITAS ADMINISTRASI & PEMERIKSAAN 2</h1>
 
     <div class="diagram-scale">
       <div class="diagram-wrapper">
         
         <div class="column">
-          <div class="column-title">Aktivitas Administrasi 1</div>
+          <div class="column-title">Aktivitas Administrasi 2</div>
 
           <div class="level-layer">
             <div class="level-text aa-lvl-1-label">Level 1</div>
