--- a/aktivitas4.html
+++ b/aktivitas4.html
@@ -654,7 +654,7 @@
       </div>
     </div>
 
-    <h1 class="page-title">Aktivitas Administrasi & Pemeriksaan</h1>
+    <h1 class="page-title">AKTIVITAS ADMINISTRASI & PEMERIKSAAN 4</h1>
 
     <div class="diagram-scale">
       <div class="diagram-wrapper">
@@ -803,7 +803,7 @@
         </div>
 
         <div class="column">
-          <div class="column-title">Aktivitas Pemeriksaan 1</div>
+          <div class="column-title">Aktivitas Pemeriksaan 4</div>
 
           <div class="level-layer">
             <div class="level-text ap-lvl-1-label">Level 1</div>
