--- a/aktivitas5.html
+++ b/aktivitas5.html
@@ -647,12 +647,12 @@
       </div>
     </div>
 
-    <h1 class="page-title">Aktivitas Administrasi & Pemeriksaan</h1>
+    <h1 class="page-title">AKTIVITAS ADMINISTRASI & PEMERIKSAAN 5</h1>
 
     <div class="diagram-scale">
       <div class="diagram-wrapper">
         <div class="column">
-          <div class="column-title">Aktivitas Administrasi 1</div>
+          <div class="column-title">Aktivitas Administrasi 5</div>
 
           <div class="level-layer">
             <div class="level-text aa-lvl-1-label">Level 1</div>
@@ -741,7 +741,7 @@
         </div>
 
         <div class="column">
-          <div class="column-title">Aktivitas Pemeriksaan 1</div>
+          <div class="column-title">Aktivitas Pemeriksaan 5</div>
 
           <div class="level-layer">
             <div class="level-text ap-lvl-1-label">Level 1</div>
