--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <style>
       body {
@@ -247,6 +248,61 @@
         .chat-avatar-wrapper { width: 80px; height: 80px; }
         .chat-box { width: 300px; height: 400px; }
       }
+
+      /* Slider */
+      .navbar {
+        /* Ubah z-index agar navbar selalu di atas slider */
+        z-index: 100; 
+      }
+
+      /* Area pembungkus slider */
+      .main-carousel-section {
+        margin-top: 80px; /* Jarak dari atas agar tidak tertutup navbar */
+        width: 100%;
+        background: #000;
+      }
+
+      /* Mengatur ukuran slider */
+      .swiper.mySwiper {
+        width: 100%;
+        height: 50vh; /* Setengah tinggi layar */
+        min-height: 350px;
+        max-height: 550px;
+      }
+
+      .swiper-slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #fff;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Agar gambar penuh tanpa gepeng */
+      }
+
+      /* Warna panah navigasi */
+      :root {
+          --swiper-navigation-color: #ffffff;
+          --swiper-pagination-color: #00abf0;
+      }
+
+      /* PENTING: Ubah margin ini agar judul tidak terlalu jauh dari slider */
+      .header-title {
+        margin-top: 40px; /* Sebelumnya 130px, sekarang dikurangi */
+        text-align: center;
+      }
+
+      @media (max-width: 900px) {
+        .swiper.mySwiper {
+            height: 40vh;
+            min-height: 250px;
+        }
+      }
+
     </style>
   </head>
   <body>
@@ -256,6 +312,25 @@
         <a href="knowledge-base.html">Knowledge Base</a>
       </div>
     </div>
+
+    <div class="main-carousel-section">
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="https://picsum.photos/1920/800?random=1" alt="Banner 1">
+            </div>
+            <div class="swiper-slide">
+                <img src="https://picsum.photos/1920/800?random=2" alt="Banner 2">
+            </div>
+            <div class="swiper-slide">
+                <img src="aset/terminal.jpg" alt="Terminal Banner">
+            </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+    </div>
+</div>
 
     <div class="header-title">
       <h1><i>Knowledge Base</i> Aktivitas dan Risiko Operasional</h1>
@@ -368,5 +443,27 @@
       // Jalankan fungsi jika user mengubah ukuran browser atau pindah layar
       window.addEventListener('resize', adjustZoomLevel);
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 1,
+      spaceBetween: 0,
+      loop: true,           // Agar bisa digeser terus menerus (infinite)
+      grabCursor: true,     // Kursor berubah jadi tangan saat hover
+      autoplay: {           // Otomatis geser sendiri
+        delay: 5000,
+        disableOnInteraction: false,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+  </script>
   </body>
 </html>
