--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="https://picsum.photos/1920/800?random=1" alt="Banner 1">
+                <img src="1.jpeg" alt="Banner 1">
             </div>
             <div class="swiper-slide">
-                <img src="https://picsum.photos/1920/800?random=2" alt="Banner 2">
+                <img src="2.jpeg" alt="Banner 2">
             </div>
             <div class="swiper-slide">
-                <img src="aset/terminal.jpg" alt="Terminal Banner">
+                <img src="3.jpeg" alt="Banner 3">
             </div>
         </div>
         <div class="swiper-button-next"></div>
