--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
       <div class="nav-links">
         <a href="index.html" class="active">Home</a>
         <a href="knowledge-base.html">Knowledge Base</a>
+        <a href="gallery.html">Gallery</a>
       </div>
     </div>
 
