--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -333,6 +333,7 @@
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="knowledge-base.html" class="active">Knowledge Base</a>
+        <a href="gallery.html">Gallery</a>
       </div>
     </div>
 
