--- a/index.html
+++ b/index.html
@@ -310,7 +310,6 @@
       <div class="nav-links">
         <a href="index.html" class="active">Home</a>
         <a href="knowledge-base.html">Knowledge Base</a>
-        <a href="gallery.html">Gallery</a>
       </div>
     </div>
 
@@ -318,13 +317,28 @@
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="1.jpeg" alt="Banner 1">
+                <img src="1.png" alt="Banner 1">
             </div>
             <div class="swiper-slide">
-                <img src="2.jpeg" alt="Banner 2">
+                <img src="2.png" alt="Banner 2">
             </div>
             <div class="swiper-slide">
-                <img src="3.jpeg" alt="Banner 3">
+                <img src="3.png" alt="Banner 3">
+            </div>
+            <div class="swiper-slide">
+                <img src="4.png" alt="Banner 4">
+            </div>
+            <div class="swiper-slide">
+                <img src="5.png" alt="Banner 5">
+            </div>
+            <div class="swiper-slide">
+                <img src="6.png" alt="Banner 6">
+            </div>
+            <div class="swiper-slide">
+                <img src="7.png" alt="Banner 7">
+            </div>
+            <div class="swiper-slide">
+                <img src="8.png" alt="Banner 8">
             </div>
         </div>
         <div class="swiper-button-next"></div>
