--- a/index.html
+++ b/index.html
@@ -340,6 +340,12 @@
             <div class="swiper-slide">
                 <img src="8.png" alt="Banner 8">
             </div>
+            <div class="swiper-slide">
+                <img src="9.png" alt="Banner 9">
+            </div>
+            <div class="swiper-slide">
+                <img src="10.png" alt="Banner 10">
+            </div>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
