--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
       /* Area pembungkus slider */
       .main-carousel-section {
-        margin-top: 41px; /* Jarak dari atas agar tidak tertutup navbar */
+        margin-top: 50px; /* Jarak dari atas agar tidak tertutup navbar */
         width: 100%;
         background: #000;
       }
@@ -265,7 +265,7 @@
       /* Mengatur ukuran slider */
       .swiper.mySwiper {
         width: 100%;
-        height: 50vh; /* Setengah tinggi layar */
+        height: 100vh; /* Setengah tinggi layar */
         min-height: 350px;
         max-height: 550px;
       }
@@ -347,6 +347,9 @@
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
+                <img src="aset/BoDSPTP.png" alt="BoD SPTP">
+            </div>
+            <div class="swiper-slide">
                 <img src="1.png" alt="Banner 1">
             </div>
             <div class="swiper-slide">
@@ -376,6 +379,7 @@
             <div class="swiper-slide">
                 <img src="10.png" alt="Banner 10">
             </div>
+
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
