--- a/index.html
+++ b/index.html
@@ -347,37 +347,37 @@
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="aset/BoDSPTP.png" alt="BoD SPTP">
+                <img src="aset/BoDSPTP.webp" alt="BoD SPTP">
             </div>
             <div class="swiper-slide">
-                <img src="1.png" alt="Banner 1">
+                <img src="1.webp" alt="Banner 1">
             </div>
             <div class="swiper-slide">
-                <img src="2.png" alt="Banner 2">
+                <img src="2.webp" alt="Banner 2">
             </div>
             <div class="swiper-slide">
-                <img src="3.png" alt="Banner 3">
+                <img src="3.webp" alt="Banner 3">
             </div>
             <div class="swiper-slide">
-                <img src="4.png" alt="Banner 4">
+                <img src="4.webp" alt="Banner 4">
             </div>
             <div class="swiper-slide">
-                <img src="5.png" alt="Banner 5">
+                <img src="5.webp" alt="Banner 5">
             </div>
             <div class="swiper-slide">
-                <img src="6.png" alt="Banner 6">
+                <img src="6.webp" alt="Banner 6">
             </div>
             <div class="swiper-slide">
-                <img src="7.png" alt="Banner 7">
+                <img src="7.webp" alt="Banner 7">
             </div>
             <div class="swiper-slide">
-                <img src="8.png" alt="Banner 8">
+                <img src="8.webp" alt="Banner 8">
             </div>
             <div class="swiper-slide">
-                <img src="9.png" alt="Banner 9">
+                <img src="9.webp" alt="Banner 9">
             </div>
             <div class="swiper-slide">
-                <img src="10.png" alt="Banner 10">
+                <img src="10.webp" alt="Banner 10">
             </div>
 
         </div>
