--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
     <div class="header-title">
       <h1><i>Knowledge Base</i> Aktivitas dan Risiko Operasional</h1>
-      <h2>PELINDO Terminal Petikemas Teluk Lamong</h2>
+      <h2>PELINDO Terminal Petikemas Teluk Lamong dan Terminal Petikemas Makassar New Port</h2>
     </div>
 
     <div class="content">
