--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -355,10 +355,13 @@
           padding-top: 10px;
           border-top: 1px solid rgba(255, 255, 255, 0.3); /* Garis pemisah tipis */
           font-size: 13px;
-          color: #e0f7fa; /* Warna teks agak terang agar kontras */
+          color: black; /* Warna teks agak terang agar kontras */
           width: 100%;
           text-align: center;
           font-weight: 500;
+          background: #ffffff;
+          border-radius: 15px;
+          box-sizing: border-box;
         }
 
         /* Opsional: Sedikit ubah padding box biar muat */
