--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -62,8 +62,18 @@
       .title {
         margin-top: 130px;
         text-align: center;
-        font-size: 34px;
+        font-size: 50px;
         font-weight: 700;
+        color: #333;
+      }
+
+      .title-2 {
+        margin-top: 0;
+        margin-left: 200px;
+        margin-right: 200px;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 400;
         color: #333;
       }
 
@@ -381,6 +391,12 @@
     </div>
 
     <h1 class="title">AKTIVITAS TERMINAL</h1>
+    <h2 class="title-2">
+      Aktivitas terminal ini merupakan bagian dari operational model yang
+      berasal dari planning and control, yang berperan dalam memastikan
+      kelancaran operasional terminal melalui pengelolaan dan pengawasan
+      kegiatan yang terintegrasi.
+    </h2>
 
     <!-- GRID BOXES -->
     <div class="kb-container">
