--- a/index.html
+++ b/index.html
@@ -62,6 +62,61 @@
         color: #0077cc;
       }
 
+      /* RUNNING TEXT */
+      .running-text {
+        position: fixed;
+        top: 65px; /* tepat di bawah navbar */
+        left: 0;
+        width: 100%;
+        height: 35px;
+        background-color: #0077cc;
+        font-size: 22.5px;
+        font-weight: 700;
+        color: #fff;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        z-index: 99;
+      }
+
+      .text-run {
+        position: absolute;
+        white-space: nowrap;
+        animation: runningText 20s linear infinite;
+      }
+
+      /* ANIMASI */
+      @keyframes runningText {
+        from {
+          transform: translateX(100%);
+        }
+        to {
+          transform: translateX(-100%);
+        }
+      }
+
+      /* RESPONSIVE */
+      @media (max-width: 768px) {
+        .navbar {
+          height: 60px;
+        }
+
+        .running-text {
+          top: 60px;
+          height: 26px;
+          font-size: 14px;
+        }
+
+        .main-carousel-section {
+          margin-top: 86px;
+        }
+      }
+
+      /* OPSIONAL: PAUSE SAAT HOVER */
+      .running-text:hover .text-run {
+        animation-play-state: paused;
+      }
+
       .header-title {
         margin-top: 130px;
         text-align: center;
@@ -277,7 +332,7 @@
 
       /* Area pembungkus slider */
       .main-carousel-section {
-        margin-top: 50px; /* Jarak dari atas agar tidak tertutup navbar */
+        margin-top: 100px; /* Jarak dari atas agar tidak tertutup navbar */
         width: 100%;
         background: #000;
       }
@@ -401,6 +456,15 @@
       <div class="nav-links">
         <a href="index.html" class="active">Home</a>
         <a href="knowledge-base.html">Knowledge Base</a>
+      </div>
+    </div>
+
+    <div class="running-text">
+      <div class="text-run">
+        <p>
+          WEBSITE INI MASIH DALAM TAHAP PENGEMBANGAN, BEBERAPA FITUR MUNGKIN
+          MASIH BELUM TERSEDIA
+        </p>
       </div>
     </div>
 
