--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Knowledge Base Terminal Teluk Lamong</title>
+    <title>Knowledge Base Terminal Teluk Lamong dan Terminal Petikemas Makassar
+        New Port</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -105,6 +106,7 @@
           top: 60px;
           height: 26px;
           font-size: 14px;
+          z-index: 101;
         }
 
         .main-carousel-section {
