--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Knowledge Base Terminal Teluk Lamong dan Terminal Petikemas Makassar
-        New Port</title>
+    <title>
+      Knowledge Base Terminal Teluk Lamong dan Terminal Petikemas Makassar New
+      Port
+    </title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -542,6 +544,7 @@
         </p>
       </div>
     </div>
+
     <div class="chat-widget-container">
       <div class="chat-box" id="chatBox">
         <div class="chat-header">
